Add Admin Role. Add "add car" and "delete car" posibilities. Add Managment page (include CarManagment and UserManagment pages)  for Admins and Moderators. Change any pictures.

--- a/RentCar/Pages/CarSelect.cshtml
+++ b/RentCar/Pages/CarSelect.cshtml
@@ -12,7 +12,7 @@
 		<li>
 			<div class="res-car">
 				<a href="/CarPage?Id=@car.Id"> <img class="car-img" src="@car.ImgPath" alt="image coming s00n"/> </a>
-				<div>
+				<div class="car-title">
 					<a class="car-title" href="/CarPage?Id=@car.Id"><strong>@car.Brand @car.Model @car.YearOfProd</strong></a><br>
 				</div>
 			</div>
