--- a/RentCar/Pages/Admin/AddCar.cshtml
+++ b/RentCar/Pages/Admin/AddCar.cshtml
@@ -5,56 +5,47 @@
 }
 
 <div class="add-car-menu">
-	<form>
+	<form method="post" enctype="multipart/form-data">
 		<h2 class="add-car-h2">This is add car menu.</h2>
-		<div class="name-car-params">
-			<p><strong>Brand:</strong></p>
-			<input class="car-params" type="text" />
+		<div>
+			<input class="input-img" type="file" name="img" value="@Model.newCar.ImgPath" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Model:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Brand" value="@Model.newCar.Brand" name="brand" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Body type:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Model" value="@Model.newCar.Model" name="model" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Year of production:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Body type" value="@Model.newCar.CarBody" name="carBody" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Drive type:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Year of production" value="@Model.newCar.YearOfProd" name="yearOfProd" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Country of production:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Drive type" value="@Model.newCar.DriveType" name="driveType" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Type of engine:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Country of production" value="@Model.newCar.CountryOfProd" name="countryOfProd" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Engine size (capacity):</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Type of engine" value="@Model.newCar.TypeOfEngine" name="typeOfEngine" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Gearbox type:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Engine size (capacity)" value="@Model.newCar.EngineV" name="engineV" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Milleage:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Gearbox type" value="@Model.newCar.TypeOfGearbox" name="typeOfGearbox" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Day price:</strong></p>
-			<input class="car-params" type="text" />
+			<input class="car-params" placeholder="Milleage" value="@Model.newCar.Milleage" name="milleage" type="text" />
 		</div>
 		<div class="name-car-params">
-			<p><strong>Week price:</strong></p>
-			<input class="car-params"  type="text" />
+			<input class="car-params" placeholder="Day price" value="@Model.newCar.DayPrice" name="dayPrice" type="text" />
 		</div>
-		<input type="submit" />
+		<div class="name-car-params">
+			<input class="car-params" placeholder="Week price" value="@Model.newCar.WeekPrice" name="weekPrice" type="text" />
+		</div>
+		<button type="submit" name="CreateStart" value="True">Add car</button> />
 	</form>
 </div>
