--- a/RentCar/Pages/CarPage.cshtml
+++ b/RentCar/Pages/CarPage.cshtml
@@ -7,7 +7,7 @@
 
 <html>
 	<body>
-	<h1>@Model.takedCar.Brand @Model.takedCar.Model @Model.takedCar.YearOfProd<img class="car-img" src="@Model.takedCar.ImgPath" /></h1>
+		<h1>@Model.takedCar.Brand @Model.takedCar.Model @Model.takedCar.YearOfProd<img class="car-img" src="@Model.takedCar.ImgPath" /></h1>
 		<h2>@Model.takedCar.CountryOfProd <img src="~/Images/@countryLower-flag.png" width="15" height="15" /></h2>
 		<hr />
 		<ul class="prices-table">
@@ -51,6 +51,7 @@
 				<p><strong>Milleage -</strong> @Model.takedCar.Milleage km</p>
 			</li>
 		</ul>
+		@if (User.IsInRole("admin") || User.IsInRole("moderator")) {<a href="/Admin/EditCar?id=@Model.takedCar.Id">Edit car</a>}
 	</body>
 </html>
 
