Transform to 3-layer architecture has been finished Add services (for BAL) and repositories (for DAL); adapt all pages and functions to 3-layer architecture; add interfaces (contracts for DAL) for app; Delete all car pictures; update interface of any pages.

--- a/RentCar/Pages/Accounts/Logout.cshtml
+++ b/RentCar/Pages/Accounts/Logout.cshtml
@@ -6,11 +6,11 @@
 
 <html>
     <body>
-        <div>
-            <h2>STFU</h2>
+        <div class="logout-menu">
+            <h2>Dou you really want to logout?</h2>
             <form class="logout-pan" method="post">
-                <button name="IsLogout" value="False">No. I love you</button>
-                <button name="IsLogout" value="True">Yes. See your later! (BBWFY)</button>
+                <button class="floating-button" name="IsLogout" value="True">Yes@*. I love you*@</button>
+                <button class="floating-button" name="IsLogout" value="False">No@*. See your later! (BBWFY)*@</button>
             </form>
         </div>
     </body>
