--- a/RentCar/Pages/Admin/CarMng.cshtml
+++ b/RentCar/Pages/Admin/CarMng.cshtml
@@ -27,7 +27,7 @@
 		</table>
 	</div>
 	<div class="add-car-menu-button">
-		<a class="add-car-ref" href="/Admin/AddCar">Add car</a><br />
+		<a class="floating-button" href="/Admin/AddCar">Add car</a><br />
 	</div>
 </form>
 
