--- a/RentCar/Pages/Admin/EditCar.cshtml
+++ b/RentCar/Pages/Admin/EditCar.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
 @model RentCar.Pages.Admin.EditCarModel
 @{
+	ViewData["Title"] = "Edit car menu";
 }
 
 <div>
 	<form method="post">
-		<input type="submit" class="del-button" value="true" name="delBtnPushed">delete car</input>
+		<input type="submit" class="floating-button" value="Delete car" name="delBtnPushed"></input>
 	</form>
 	
 </div>
