--- a/RentCar/Pages/Managment.cshtml
+++ b/RentCar/Pages/Managment.cshtml
@@ -3,10 +3,18 @@
 @{
 }
 
-<div>
-	@if (User.IsInRole("moderator"))
-	{
-		<a class="give-role-button" href="/Moderator/GiveRole">Users managment</a><br />
-	}
-	<a class="delete-car-ref" href="/Admin/CarMng">Cars managment</a>
+<div class="managment">
+	<ul class="manage-operations">
+		<li>
+			<a class="delete-car-ref" href="/Admin/CarMng">Cars managment</a>
+		</li>
+		<li>
+			@if (User.IsInRole("moderator"))
+			{
+				<a class="give-role-button" href="/Moderator/GiveRole">Users managment</a>
+
+				<br />
+			}
+		</li>
+	</ul>
 </div>
