--- a/RentCar/Pages/Accounts/Reg.cshtml.css
+++ b/RentCar/Pages/Accounts/Reg.cshtml.css
@@ -6,9 +6,10 @@
 h1{
     font-family: Calibri;
     color: limegreen;
+    text-align: center;
 }
 
-.reg-form {
+/*.reg-form {
     border-style: solid;
     background-color: gray;
     max-width: 400px;
@@ -16,5 +17,50 @@ h1{
     justify-content: center;
     align-items: center;
     margin-top: 150px;
-   
+}*/
+
+.reg-menu {
+    border-radius: 25px;
+    border-style: solid;
+    background-color: gray;
+    max-width: 400px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
 }
+
+.text-center {
+    font-family: Comic Sans MS;
+    color: limegreen;
+    text-align: center;
+}
+
+.floating-button {
+    text-decoration: none;
+    display: inline-block;
+    width: 98px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 45px;
+    border-color: transparent;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 8px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .4s;
+    cursor: pointer;
+}
+
+    .floating-button:hover {
+        background: #32CD32;
+        box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+        color: white;
+        transform: translateY(-7px);
+    }
