--- a/RentCar/Pages/CarPage.cshtml.css
+++ b/RentCar/Pages/CarPage.cshtml.css
@@ -20,3 +20,13 @@ img.car-img{
     width: 1000px;
     height: 500px;
 }
+
+a.edit-car-button {
+    color:white;
+    font-family:'Comic Sans MS';
+    margin-left: 30px;
+}
+
+a.edit-car:no-button:hover{
+    color: limegreen;
+}
