Begin of RentTime system development.

--- a/RentCar/Pages/Accounts/MyAccount.cshtml
+++ b/RentCar/Pages/Accounts/MyAccount.cshtml
@@ -8,7 +8,7 @@
 <html>
     <body>
         <h1 class="hello-user"><strong>Hello @User.Identity.Name</strong></h1>
-        <p class="money">Your money =$@Model.CurrentUser.Money (WOW)</p>
+        @*<p class="money">Your money =$@Model.CurrentUser.Money (WOW)</p>*@
         <ul class="my-account-menu">
             <li>
                <a href="/Accounts/Logout">Logout</a>
