--- a/RentCar/Pages/Accounts/Sign-in.cshtml
+++ b/RentCar/Pages/Accounts/Sign-in.cshtml
@@ -8,7 +8,7 @@
         <h1 class="sign-in">Sign in</h1>
         <div class="text-center">
             <label>Username</label><br />
-            <input type="text" name="username" value="@Model.Username" />
+            <input type="text" name="username" />
         </div>
         <div class="text-center">
             <label>Password</label><br />
