Add edit car posibility; Edit FrontEnd of any pages; Edit interfaces;

--- a/RentCar/Pages/Accounts/Logout.cshtml
+++ b/RentCar/Pages/Accounts/Logout.cshtml
@@ -9,8 +9,8 @@
         <div class="logout-menu">
             <h2>Dou you really want to logout?</h2>
             <form class="logout-pan" method="post">
-                <button class="floating-button" name="IsLogout" value="True">Yes@*. I love you*@</button>
-                <button class="floating-button" name="IsLogout" value="False">No@*. See your later! (BBWFY)*@</button>
+                <button class="floating-button-logout" name="IsLogout" value="True">Yes@*. I love you*@</button>
+                <button class="floating-button-cancel" name="IsLogout" value="False">No@*. See your later! (BBWFY)*@</button>
             </form>
         </div>
     </body>
