--- a/RentCar/Pages/Accounts/Logout.cshtml.css
+++ b/RentCar/Pages/Accounts/Logout.cshtml.css
@@ -13,7 +13,7 @@
     color: limegreen;
 }
 
-.floating-button {
+.floating-button-cancel {
     text-decoration: none;
     display: inline-block;
     width: 98px;
@@ -35,9 +35,38 @@
     cursor: pointer;
 }
 
-    .floating-button:hover {
-        background: #32CD32;
-        box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
-        color: white;
-        transform: translateY(-7px);
-    }
+.floating-button-cancel:hover {
+    background: #32CD32;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+    color: white;
+    transform: translateY(-7px);
+}
+
+.floating-button-logout {
+    text-decoration: none;
+    display: inline-block;
+    width: 98px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 45px;
+    border-color: transparent;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .4s;
+    cursor: pointer;
+}
+
+.floating-button-logout:hover {
+    background: #c90000;
+    box-shadow: 0 15px 20px rgba(201, 0, 0, 1);
+    color: white;
+    transform: translateY(-7px);
+}
