--- a/RentCar/Pages/Admin/AddCar.cshtml
+++ b/RentCar/Pages/Admin/AddCar.cshtml
@@ -6,82 +6,119 @@
 
 <div >
 	<form method="post" enctype="multipart/form-data">
-		<ul class="add-car-menu">
-			<li>
-				<h2 class="add-car-h2">This is add car menu.</h2>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Brand" value="@Model.newCar.Brand" name="brand" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Model" value="@Model.newCar.Model" name="model" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Body type" value="@Model.newCar.CarBody" name="carBody" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Year of production" value="@Model.newCar.YearOfProd" name="yearOfProd" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Drive type" value="@Model.newCar.DriveType" name="driveType" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Country of production" value="@Model.newCar.CountryOfProd" name="countryOfProd" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Type of engine" value="@Model.newCar.TypeOfEngine" name="typeOfEngine" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Engine size (capacity)" value="@Model.newCar.EngineV" name="engineV"  />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Gearbox type" value="@Model.newCar.TypeOfGearbox" name="typeOfGearbox" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Milleage" value="@Model.newCar.Milleage" name="milleage" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Day price" value="@Model.newCar.DayPrice" name="dayPrice" />
-				</div>
-			</li>
-			<li>
-				<div class="name-car-params">
-					<input class="car-params" placeholder="Week price" value="@Model.newCar.WeekPrice" name="weekPrice" />
-				</div>
-				<br />
-			</li>
-			<li>
-				<div>
-					<input class="input-img" type="file" name="img" value="@Model.newCar.ImgPath" />
-					<p>Recommended .png images. Only 2:1 aspect ratio</p>
-				</div>
-			</li>
-			<li>
-				<br />
+		<div class="add-car-menu">
+			<h2 class="add-car-h2">This is add car menu.</h2>
+			<table class="elements-table">
+				<tr>
+					<td><p class="option-name"><strong>Brand</strong></p></td>
+					<td><input class="select-menu" value="@Model.newCar.Brand" name="brand" /></td>
+				</tr>
+				<tr>
+					<td><p class ="option-name"><strong>Model</strong></p></td>
+					<td><input class="select-menu" value="@Model.newCar.Model" name="model" /></td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Car body type</strong></p></td>
+					<td>
+						<select name="carBody" class="select-menu">
+							<option selected>Select car body</option>
+							<option value="Hatchback">Hatchback</option>
+							<option value="SportCar">SportCar</option>
+							<option value="Sedan">Sedan</option>
+							<option value="Minivan">Minivan</option>
+							<option value="Cabriolet">Cabriolet</option>
+							<option value="Crossover">Crossover</option>
+							<option value="Pick-up">Pick-up</option>
+							<option value="Truck">Truck</option>
+							<option value="Van">Van</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class ="option-name"><strong>Year of production</strong></p></td>
+					<td><input class="input-menu" type="number" value="@Model.newCar.YearOfProd" name="yearOfProd" min="1900" max="@DateTime.Today.Year" /></td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Drive type</strong></p></td>
+					<td>
+						<select name ="driveType" class="select-menu">
+							<option selected disabled>Select drive type</option>
+							<option value="FWD">FWD</option>
+							<option value="RWD">RWD</option>
+							<option value="4x4">4x4</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class="option-name">	<strong>Country of production</strong></p></td>
+					<td>
+						<select name="countryOfProd" class="select-menu">
+							<option selected>Select country of production</option>
+							<option value="Germany">Germany</option>
+							<option value="Japan">Japan</option>
+							<option value="United states">United states</option>
+							<option value="Great Britain">Great Britain</option>
+							<option value="France">France</option>
+							<option value="Sweden">Sweden</option>
+							<option value="Italy">Italy</option>
+							<option value="South Korea">South Korea</option>
+							<option value="Russia">Russia</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class ="option-name"><strong>Type of engine</strong></p></td>
+					<td>
+						<select name="typeOfEngine" class="select-menu">
+							<option selected>Select engine type</option>
+							<option value="Petrol">Petrol</option>
+							<option value="Diesel">Diesel</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Engine capacity</strong></p>	</td>
+					<td>
+						<select name ="engineV" class="select-menu">
+							<option selected >Select engine capacity</option>
+							@for(decimal i = 0.3m; i < 20; i+=0.1m)
+							{
+								<option value="@i">@i</option>
+							}
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Type of gearbox</strong></p></td>
+					<td>
+						<select name="typeOfGearbox" class="select-menu">
+							<option selected >Select gearbox type</option>
+							<option value="Mechanical">Mechanical</option>
+							<option value="Auto">Auto</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td><p class ="option-name"><strong>Milleage</strong></p></td>
+					<td><input class="input-menu" type="number" value="@Model.newCar.Milleage" min="0" name="milleage" /></td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Day Price</strong></p></td>
+					<td><input class="input-menu" type="number" value="@Model.newCar.DayPrice" name="dayPrice" step="0.5" min="30" max="10000" /></td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><strong>Week price</strong></p></td>
+					<td><input class="input-menu" type="number" value="@Model.newCar.WeekPrice" name="weekPrice" step="0.5" min="300" max="50000" /></td>
+				</tr>
+				<tr>
+					<td><p class="option-name"><input class="input-img" type="file" name="img" value="@Model.newCar.ImgPath" /></p></td>
+					<td><p class="warning">Recommended .png images. Only 2:1 aspect ratio</p></td>
+				</tr>
+			</table>
+			<div class="buttons">
 				<button class="floating-button" type="submit" name="CreateStart" value="True">Add car</button>
-				<button class="floating-button" type="submit" name="CreateStart" value="False">Cancel</button><br /><br />
-			</li>
-		</ul>
+				<button class="floating-button" type="submit" name="CreateStart" value="False">Cancel</button>
+			</div>
+		</div>
 	</form>
 </div>
