--- a/RentCar/Pages/Admin/AddCar.cshtml.css
+++ b/RentCar/Pages/Admin/AddCar.cshtml.css
@@ -2,12 +2,33 @@
     border: solid;
     border-radius: 25px;
     background-color: gray;
-    max-width: 400px;
+    max-width: 500px;
     margin: auto;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
-    list-style-type:none;
+    margin-top: 60px;
+}
+
+p.warning{
+    color: limegreen;
+}
+
+table {
+    margin: auto;
+    margin-top: 5px;
+    border-spacing: 1px 1px;
+}
+
+p.option-name{
+    margin-left: 20px;
+}
+
+.input-menu{
+    width: 170px;
+}
+
+.select-menu{
+    width: 175px;
 }
 
 h2{
@@ -16,8 +37,8 @@ h2{
     text-align: center;
 }
 
-.car-params{
-    align-items: center;
+div.buttons{
+    margin-left: 100px;
 }
 
 .floating-button {
