--- a/RentCar/Pages/Admin/EditCar.cshtml.css
+++ b/RentCar/Pages/Admin/EditCar.cshtml.css
@@ -1,4 +1,47 @@
-﻿.floating-button {
+﻿.edit-car-menu {
+    border: solid;
+    border-radius: 25px;
+    background-color: gray;
+    max-width: 500px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+}
+
+div.buttons {
+    margin-left: 100px;
+}
+
+p.warning {
+    color: limegreen;
+}
+
+table {
+    margin: auto;
+    margin-top: 5px;
+    border-spacing: 1px 1px;
+}
+
+p.option-name {
+    margin-left: 20px;
+}
+
+.input-menu {
+    width: 170px;
+}
+
+.select-menu {
+    width: 175px;
+}
+
+.edit-car-h2 {
+    font-family: 'Comic Sans MS';
+    color: limegreen;
+    text-align: center;
+}
+
+.floating-button {
     text-decoration: none;
     display: inline-block;
     width: 98px;
@@ -20,9 +63,38 @@
     cursor: pointer;
 }
 
-    .floating-button:hover {
-        background: #32CD32;
-        box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+.floating-button:hover {
+    background: #32CD32;
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+    color: white;
+    transform: translateY(-7px);
+}
+
+.floating-button-delete {
+    text-decoration: none;
+    display: inline-block;
+    width: 98px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 45px;
+    border-color: transparent;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 9px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .4s;
+    cursor: pointer;
+}
+
+    .floating-button-delete:hover {
+        background: #c90000;
+        box-shadow: 0 15px 20px rgba(201, 0, 0, 1);
         color: white;
         transform: translateY(-7px);
     }
