Fix bug with automatical ending of rent after the expiration date; Rework rentcar function and page; Change services and repositories for RentTime objects

--- a/RentCar/Pages/Accounts/RentingCars.cshtml
+++ b/RentCar/Pages/Accounts/RentingCars.cshtml
@@ -34,8 +34,5 @@
 			</tr>
 		</table>
 	}
-	else
-	{
-		<h1 class="no-cars">You are haven't any cars</h1>
-	}
+	else {<h1 class="no-cars">You are haven't any cars</h1>}
 </body>
