--- a/RentCar/Pages/CarPage.cshtml
+++ b/RentCar/Pages/CarPage.cshtml
@@ -55,8 +55,7 @@
 		<form method="post" >
 			<div>
 				<input name="carId" value="@Model.takedCar.Id" hidden/>
-				<button class="floating-button" name="rentTermButton" value="1">Rent for a day</button>
-				<button class="floating-button" name="rentTermButton" value="7">Rent for a week</button>
+				<button class="floating-button" name="rentBtnPushed" value="true">Rent this car</button>
 			</div>
 		</form>
 	</body>
