Fix error with start of rent car; Fix bug with automatical ending of rent after the expiration date; Rework rentcar function and page; Change services and repositories for RentTime objects

--- a/RentCar/Pages/ChooseRentDate.cshtml
+++ b/RentCar/Pages/ChooseRentDate.cshtml
@@ -18,10 +18,7 @@
 
 <div class="choose-rent">
 	<form method="post">
-        @if(@Model.currentUser.RentTime.Count > 0)
-        {
-            Response.Redirect("/Error");
-        }
+        @*@if(@Model.currentUser.RentTime.Count == 1){Response.Redirect("/Error");}*@
         <h1 class="center">@Model.takedCar.Brand @Model.takedCar.Model @Model.takedCar.YearOfProd</h1>
         <input name="currentUserId" value="@Model.currentUser.Id" hidden/>
         <input name="takedCarId" value="@Model.takedCar.Id" hidden />
