--- a/RentCar/Pages/ChooseRentDate.cshtml
+++ b/RentCar/Pages/ChooseRentDate.cshtml
@@ -3,35 +3,56 @@
 @model RentCar.Pages.ChooseRentDateModel
 @{
     ViewData["Title"] = "Rent car menu";
+    bool hasRows = false;
     string datestrToday = DateTime.Today.ToShortDateString();
     string datestrPlusDay = DateTime.Today.AddDays(1).ToShortDateString();
-    string datestrPlusWeek = DateTime.Today.AddDays(7).ToShortDateString();
+    string datestrPlusTwoWeeks = DateTime.Today.AddDays(14).ToShortDateString();
     string datestrPlusMonth = DateTime.Today.AddMonths(1).ToShortDateString();
 
     string formatsrc  = "dd.MM.yyyy";
     string formatdst  = "yyyy-MM-dd";
     DateTime today = DateTime.ParseExact(datestrToday, formatsrc, CultureInfo.InvariantCulture);
     DateTime plusDay = DateTime.ParseExact(datestrPlusDay, formatsrc, CultureInfo.InvariantCulture);
-    DateTime plusWeek = DateTime.ParseExact(datestrPlusWeek, formatsrc, CultureInfo.InvariantCulture);
+    DateTime plusTwoWeeks = DateTime.ParseExact(datestrPlusTwoWeeks, formatsrc, CultureInfo.InvariantCulture);
     DateTime plusMonth = DateTime.ParseExact(datestrPlusMonth, formatsrc, CultureInfo.InvariantCulture);
 }
 
 <div class="choose-rent">
 	<form method="post">
-        @*@if(@Model.currentUser.RentTime.Count == 1){Response.Redirect("/Error");}*@
         <h1 class="center">@Model.takedCar.Brand @Model.takedCar.Model @Model.takedCar.YearOfProd</h1>
         <input name="currentUserId" value="@Model.currentUser.Id" hidden/>
         <input name="takedCarId" value="@Model.takedCar.Id" hidden />
 		<p class="center">
             <label class="center" for="date">Rent start date: </label>
-            <input type="date" name="rentStartDate" value="@today.ToString(formatdst)" min="@today.ToString(formatdst)" max="@plusWeek.ToString(formatdst)" />
-            @*<input type="date" name="rentStartDate" value="@DateTime.Today.ToShortDateString()" min="@DateTime.Today.ToShortDateString()" max="@DateTime.Today.AddDays(7).ToShortDateString()" />*@
-            
+            <input type="date" name="rentStartDate" value="@today.ToString(formatdst)" min="@today.ToString(formatdst)" max="@plusTwoWeeks.ToString(formatdst)" />
         </p>
         <p class="center">
             <label class="center" for="date">Rent end date: </label>
             <input type="date" name="rentEndDate" min="@plusDay.ToString(formatdst)" max="@plusMonth.ToString(formatdst)" />
         </p>
+        <hr />
+        <h2 class="table">Actual rents for this car:</h2>
+        <table class="table">
+            <tr>
+                <th><p class="table"><strong>Car</strong></p></th>
+                <th><p class="table"><strong>Rent start date</strong></p></th>
+                <th><p class="table"><strong>Rent end date</strong></p></th>
+            </tr>
+            @foreach (var time in Model.allTimes)
+            {
+                if (Model.takedCar.Id == time.CarId)
+                {
+                    <tr>
+                        <td class="table">@Model.takedCar.Brand @Model.takedCar.Model</td>
+                        <td class="table">@time.RentStartTime.ToShortDateString()</td>
+                        <td class="table">@time.RentEndTime.ToShortDateString()</td>
+                    </tr>
+                    hasRows = true;
+                }
+            }
+        </table>
+        @if (!hasRows) {<h2 class="center">This car is full available for you!</h2>}
+        <hr />
         <button class="floating-button" type="submit">Rent car</button>
 	</form>
 </div>
