--- a/RentCar/Pages/ChooseRentDate.cshtml.css
+++ b/RentCar/Pages/ChooseRentDate.cshtml.css
@@ -16,6 +16,13 @@
     text-align: center;
 }
 
+.table {
+    font-family: Comic Sans MS;
+    color: black;
+    text-align: center;
+    margin-left: 15px;
+}
+
 .floating-button {
     text-decoration: none;
     display: inline-block;
