--- a/RentCar/Pages/Error.cshtml
+++ b/RentCar/Pages/Error.cshtml
@@ -4,9 +4,11 @@
 	ViewData["Title"] = "Error";
 }
 
-
-
 <div>
-	<h1><strong>You are already have renting car. Wait for end of your car renting time or stop your actual rent</strong></h1>
+	<h1><strong>@Model.errorText</strong></h1>
 	<p>Go to <a href="/Index">Home page</a></p>
+	@if(Model.errorText == "error-car-unavb")
+	{
+		
+	}
 </div>
