--- a/RentCar/Pages/Accounts/MyAccount.cshtml
+++ b/RentCar/Pages/Accounts/MyAccount.cshtml
@@ -1,24 +1,17 @@
 ﻿@page
 @model RentCar.Pages.MyAccountModel
-@{
-    ViewData["Title"] = "My account";
-}
-
+@{ViewData["Title"] = "My account";}
 
 <html>
     <body>
         <h1 class="hello-user"><strong>Hello @User.Identity.Name</strong></h1>
-        @*<p class="money">Your money =$@Model.CurrentUser.Money (WOW)</p>*@
         <ul class="my-account-menu">
             @if(@User.Identity.IsAuthenticated)
             {
-                <li>
-                    <a href="/Accounts/RentingCars?UserId=@Model.CurrentUser?.Id">Actual rents</a>
-                </li>   
+                <li> <a href="/Accounts/RentingCars?UserId=@Model.CurrentUser.Id">Actual rents</a> </li>
+                <li> <a href="/Accounts/CarsCompare?UserId=@Model.CurrentUser.Id">Cars comparing</a> </li>
             }
-            <li>
-               <a href="/Accounts/Logout">Logout</a>
-            </li>
+            <li> <a href="/Accounts/Logout">Logout</a> </li>
         </ul>
         </body>
     </html>
