--- a/RentCar/Pages/CarPage.cshtml
+++ b/RentCar/Pages/CarPage.cshtml
@@ -56,6 +56,7 @@
 			<div>
 				<input name="carId" value="@Model.takedCar.Id" hidden/>
 				<button class="floating-button" name="rentBtnPushed" value="true">Rent this car</button>
+				<button class="floating-button" name="compareBtnPushed" value="true">Add to compare</button>
 			</div>
 		</form>
 	</body>
