Finish of developing compare system; Start of developing system for working with archive and user rent history. Add some pages.

--- a/RentCar/Pages/Accounts/MyAccount.cshtml
+++ b/RentCar/Pages/Accounts/MyAccount.cshtml
@@ -10,6 +10,7 @@
             {
                 <li> <a href="/Accounts/RentingCars?UserId=@Model.CurrentUser.Id">Actual rents</a> </li>
                 <li> <a href="/Accounts/CarsCompare?UserId=@Model.CurrentUser.Id">Cars comparing</a> </li>
+                <li> <a href="/Accounts/RentHistory?UserId=@Model.CurrentUser.Id">History of your rents</a></li>
             }
             <li> <a href="/Accounts/Logout">Logout</a> </li>
         </ul>
