--- a/RentCar/Pages/Accounts/CarsCompare.cshtml
+++ b/RentCar/Pages/Accounts/CarsCompare.cshtml
@@ -4,33 +4,50 @@
 
 <body>
 	<div>
-		<form method="post">
-			<input name="currentUser" value="@Model.currentUser "hidden />
-			<table>
-				<tr>
-					<th><strong>Cars</strong></th>
-					<th><strong>Name</strong></th>
-					<th><strong>Country of prod</strong></th>
-				</tr>
-				@if (Model.currentUser.UserCompare != null)
-				{
-					@if(Model.currentUser.UserCompare.CompareCar1ID == null || Model.currentUser.UserCompare.CompareCar2ID == null)
+		<table>
+			<tr>
+				<th><strong>Cars</strong></th>
+				<th><strong>Name</strong></th>
+				<th><strong>Country of prod.</strong></th>
+				<th><strong>Year of prod.</strong></th>
+				<th><strong>Drive type</strong></th>
+				<th><strong>Engine capacity</strong></th>
+				<th><strong>Type of engine</strong></th>
+				<th><strong>Milleage</strong></th>
+				<th><strong>Day Price</strong></th>
+				<th><strong>Week Price</strong></th>
+				<th></th>
+			</tr>
+			@if(Model.comCars != null)
+			{
+				<form method="post">
+					<input name="userId" value="@Model.currentUser.Id" hidden />
+					@foreach (var comCar in Model.comCars)
 					{
-						<button name="AddToComBtnPushed" value="true">New compare</button>
+						if (comCar == null) { continue; }
+						<tr>
+							<td><img src="@comCar.ImgPath" width="60" height="40" /></td>
+							<td>@comCar.Brand @comCar.Model</td>
+							<td>@comCar.CountryOfProd</td>
+							<td>@comCar.YearOfProd</td>
+							<td>@comCar.DriveType</td>
+							<td>@comCar.EngineV</td>
+							<td>@comCar.TypeOfEngine</td>
+							<td>@comCar.Milleage</td>
+							<td>@comCar.DayPrice</td>
+							<td>@comCar.WeekPrice</td>
+							<td>
+								<input name="carId" value="@comCar.Id" hidden>
+								<button class="floating-button" name="DelFromComBtnPushed" value="true">Delete from compare</button>
+							</td>
+						</tr>
 					}
-					else
-					{
-						@foreach (var comCar in Model.comCars)
-						{
-							<tr>
-								<td><img src="@comCar.ImgPath" width="40" height="40" /></td>
-								<td>@comCar.Brand @comCar.Model</td>
-								<td>@comCar.CountryOfProd</td>
-							</tr>
-						}
-					}	
-				}
-			</table>
+				</form>
+			}
+		</table>
+		<form method="post">
+			<input name="userId" value="@Model.currentUser.Id" hidden />
+			<button class="floating-button" name="DelComBtnPushed" value="true">Delete all cars from compare</button>
 		</form>
 	</div>
 </body>
