--- a/RentCar/Pages/Accounts/RentingCars.cshtml
+++ b/RentCar/Pages/Accounts/RentingCars.cshtml
@@ -30,7 +30,7 @@
 				<td class="borders">
 					<p>@Model.UserRent.RentEndTime</p>
 				</td>
-				<td class="borders"><form method="post"><button class="float-btn" name="deleteRent" value="True">Stop rent</button></form></td>
+				<td class="borders"><form method="post"><button class="float-btn" name="deleteRentBtnPushed" value="True">Stop rent</button></form></td>
 			</tr>
 		</table>
 	}
