--- a/RentCar/Pages/Shared/_Layout.cshtml
+++ b/RentCar/Pages/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <nav class="navbar">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="~/Images/RentCarLogo.png" width="45" height="45" >RentCar</a>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div>
                     <ul class="navbar-nav">
                         <li class="index-nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
