--- a/RentCar/Pages/CarSelect.cshtml.css
+++ b/RentCar/Pages/CarSelect.cshtml.css
@@ -1,7 +1,4 @@
-﻿body {
-}
-
-h2 {
+﻿h2 {
     font-family: 'Comic Sans MS';
     color: limegreen;
     margin-left: 30px;
@@ -33,3 +30,89 @@ ul.res-pan li a:hover {
     text-decoration: underline;
     font-family: Calibri;
 }
+
+.car-card {
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: all 1s ease-in-out;
+    width: 100%;
+}
+
+    .car-card:hover {
+        transform: rotateY(180deg);
+    }
+
+    .car-card .icon {
+        backface-visibility: hidden;
+        border-radius: 6px;
+        height: 100%;
+        position: absolute;
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .car-card .back {
+        padding: 60px 5px 5px 20px;
+        color: white;
+        line-height: 40px;
+        text-align: center;
+        transform: rotateY(180deg);
+        font-size: 1.2em;
+        margin: 0 15px;
+        box-shadow: 5px 5px 75px rgba(46, 229, 157, .4);
+        background: black;
+        opacity: 0.7;
+    }
+
+    .car-card .back img.car-img{
+        height: 250px;
+        width: 500px;
+        float: right;
+        margin: 10px 10px 5px 5px;
+    }
+
+    .car-card a, p.prices{
+        color: white;
+        font-family: 'Comic Sans MS';
+        text-decoration: none;
+    }
+
+.container {
+    cursor: pointer;
+    height: 400px;
+    perspective: 500;
+    position: relative;
+    width: 750px;
+}
+
+.floating-button {
+    
+    text-decoration: none;
+    display: inline-block;
+    width: 130px;
+    height: 45px;
+    line-height: 32px;
+    border-radius: 45px;
+    border-color: transparent;
+    margin: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 600;
+    color: #524f4e;
+    background: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+    transition: .4s;
+    cursor: pointer;
+}
+
+    .floating-button:hover {
+        background: #32CD32;
+        box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+        color: white;
+        transform: translateY(-7px);
+    }
+
