Begin of development notify system.

--- a/RentCar/Pages/CarPage.cshtml
+++ b/RentCar/Pages/CarPage.cshtml
@@ -1,7 +1,7 @@
 ﻿ @page
 @model RentCar.Pages.CarPageModel
 @{
-	ViewData["Title"] = $"Car Page";
+	ViewData["Title"] = "Car Page";
 }
 @{string countryLower = (Model.takedCar.CountryOfProd).ToLower();}
 
